[tool.poetry]
name = "saathi"
version = "0.1.0"
description = "In Nepali, saathi means a friend. This application let's user to interact with a local llm via audio/or text input using ollama"
authors = ["drimal <rimaldipak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain="0.3.0"
langchain_community="0.3.0"
langchain_core="0.3.0"
langchain_ollama="0.2.0"
ollama="0.3.3"
openai="1.45.0"
SpeechRecognition="3.10.4"
streamlit="1.38.0"
black = "^24.8.0"
ruff = "^0.6.5"
pre-commit = "^3.8.0"
inflect = "^7.4.0"
pyobjc = "^10.3.1"
playsound = "^1.3.0"
soundfile = "^0.12.1"
torch = "^2.4.1"
whisper = "^1.1.10"
duckduckgo-search = "^6.2.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
